--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "video-downloader",
+  "name": "dwnldr",
   "version": "0.0.1",
-  "description": "",
+  "description": "An all encompassing media downloading npm module.",
   "main": "main.js",
   "scripts": {
-    "test": "standard "
+    "test": "standard"
   },
   "author": "Uditt Lamba",
   "license": "MIT",
@@ -12,7 +12,6 @@
     "@jest/globals": "^26.5.3",
     "axios": "^0.21.0",
     "dayjs": "^1.9.1",
-    "ffmpeg": "0.0.4",
     "jest": "^26.5.3",
     "snoowrap": "^1.21.0",
     "stream": "0.0.2",
@@ -23,6 +22,7 @@
     "eslint-config-standard": "^16.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1"
+    "eslint-plugin-promise": "^4.2.1",
+    "when": "^3.7.8"
   }
 }
