--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
   "description": "An all encompassing media downloading npm module.",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "jest",
+    "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
+    "standard": "standard --fix"
   },
   "author": "Uditt Lamba",
   "license": "MIT",
   "dependencies": {
+    "when": "^3.7.8",
     "@jest/globals": "^26.5.3",
     "axios": "^0.21.0",
-    "dayjs": "^1.9.1",
-    "jest": "^26.5.3",
-    "snoowrap": "^1.21.0",
-    "stream": "0.0.2",
     "ytdl-core": "^4.0.0"
   },
   "devDependencies": {
+    "co-exec": "^1.0",
+    "codecov": "^1.0.1",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "when": "^3.7.8"
+    "ghooks": "^1.2.4",
+    "jest": "^26.6.2",
+    "nyc": "^10.0.0",
+    "standard": "^8.4.0",
+    "travis": "^0.1.1"
   }
 }
