--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: false
 language: node_js
 node_js:
   - stable
-script: 
+script:
+  - mkdir -p test/vid
+  - mkdir
   - npm test
 after_success:
   - npm run report-coverage
